plugins {
    id 'com.github.jk1.dependency-license-report' version '3.1.4'
    id 'com.gradleup.shadow' version '9.5.1' apply false
}

import com.github.jk1.license.render.InventoryHtmlReportRenderer
import com.github.jk1.license.render.CsvReportRenderer
import com.github.jk1.license.filter.LicenseBundleNormalizer
import groovy.io.FileType

licenseReport {
    outputDir = "$rootDir/documentation/third-party-licenses"
    projects = [project] + subprojects
    configurations = ['runtimeClasspath']
    renderers = [
        new InventoryHtmlReportRenderer('index.html', 'a12-studio Third-Party Licenses'),
        new CsvReportRenderer('licenses.csv')
    ]
    filters = [new LicenseBundleNormalizer()]
}

tasks.register('generateLicenses') {
    group = 'documentation'
    description = 'Aggregates third-party dependency license information for all modules (Gradle equivalent of vpin-studio\'s "mvn license:aggregate-download-licenses").'
    dependsOn 'generateLicenseReport'
    doLast {
        // gradle-license-report extracts embedded license files (LICENSE, NOTICE, ...) from each
        // jar into "<outputDir>/<jarFileName>/<zip entry path>". Flatten those into plain .txt
        // files directly under outputDir instead of leaving one subfolder per jar around.
        def outDir = file(licenseReport.outputDir)
        outDir.listFiles({ f -> f.isDirectory() } as FileFilter)?.each { artifactDir ->
            def artifactName = artifactDir.name.replaceFirst(/\.jar$/, '')
            artifactDir.eachFileRecurse(FileType.FILES) { licenseFile ->
                def baseName = licenseFile.name.contains('.') ?
                        licenseFile.name.substring(0, licenseFile.name.lastIndexOf('.')) : licenseFile.name
                def target = new File(outDir, "${artifactName}-${baseName}.txt")
                target.bytes = licenseFile.bytes
            }
            artifactDir.deleteDir()
        }
    }
}

// Shared by generateMarketplace (downloadUrl) and buildPluginJars (archiveFileName) so a
// locally-built plugin jar has the same filename as the one the marketplace entry points to.
def pluginModuleJarName = { File moduleDir ->
    rootDir.toPath().relativize(moduleDir.toPath()).toString().replace('\\', '/').replace('/', '-') + '.jar'
}

tasks.register('generateMarketplace') {
    dependsOn('buildPluginJars')

    group = 'plugins'
    description = 'Scans all plugin.json files in the workspace and aggregates them into marketplace.json.'

    def pluginDirs = subprojects
        .collect { proj -> file("${proj.projectDir}/plugin.json") }
        .findAll { it.exists() }

    inputs.files(pluginDirs)

    def outputFile = file("${rootDir}/a12-studio-plugin-manager/src/main/resources/marketplace.json")
    outputs.file(outputFile)

    doLast {
        def plugins = pluginDirs.collect { pluginJson ->
            def slurper = new groovy.json.JsonSlurper()
            def descriptor = slurper.parse(pluginJson)
            // Derive the raw GitHub download URL for the JAR from the module path.
            // The JAR artifact lives at:
            //   https://github.com/syd711/a12-studio/releases/download/<tag>/<module>-<version>.jar
            // For the marketplace downloadUrl we point to the raw plugin.json so the
            // manager can also show it; the actual JAR download URL is set per-release.
            // Here we compute the canonical raw-content URL for the plugin.json itself
            // so that the manager can always discover the latest descriptor.
            def relPath = rootDir.toPath().relativize(pluginJson.toPath()).toString().replace('\\', '/')
            descriptor['pluginJsonUrl'] = "https://raw.githubusercontent.com/syd711/a12-studio/main/${relPath}"
            // Point downloadUrl to the shadow/fat JAR built by the module.
            def moduleDir = pluginJson.parentFile
            descriptor['downloadUrl'] = "https://github.com/syd711/a12-studio/releases/latest/download/${pluginModuleJarName(moduleDir)}"
            return descriptor
        }
        def json = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson([plugins: plugins]))
        outputFile.parentFile.mkdirs()
        outputFile.text = json
        logger.lifecycle("marketplace.json written with ${plugins.size()} plugin(s) to ${outputFile}")
    }
}

tasks.register('buildPluginJars', Copy) {
    group = 'plugins'
    description = 'Builds a fat JAR (via shadowJar) for each a12-studio-plugins module and copies it into the root plugins/ folder.'

    def pluginProjects = subprojects.findAll { proj -> file("${proj.projectDir}/plugin.json").exists() }
    dependsOn pluginProjects.collect { "${it.path}:shadowJar" }

    pluginProjects.each { proj ->
        from(proj.tasks.named('shadowJar').flatMap { it.archiveFile })
    }
    into "${rootDir}/plugins"
}

subprojects {
    apply plugin: 'java'

    group = 'de.a12.studio'
    version = '2026.06-ext0-0.0.8'

    // Plugin modules (identified by a plugin.json descriptor) also get the shadow plugin so
    // they can be built into standalone fat JARs for the root plugins/ folder, see
    // buildPluginJars below.
    if (file('plugin.json').exists()) {
        apply plugin: 'com.gradleup.shadow'
        tasks.named('shadowJar') {
            archiveFileName = pluginModuleJarName(projectDir)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 21
    }

    dependencies {
        // compileOnly (not implementation): these are compile-time-only nullness annotations,
        // never inspected via reflection at runtime, so there's no need to bundle them into any
        // module's shadow/boot jar - every plugin was otherwise carrying its own redundant copy
        // on top of the one already bundled into a12-studio-ui's fat jar.
        compileOnly 'org.jspecify:jspecify:1.0.0'
        compileOnly 'org.projectlombok:lombok:1.18.46'
        annotationProcessor 'org.projectlombok:lombok:1.18.46'
        testCompileOnly 'org.projectlombok:lombok:1.18.46'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
